# cargo-wasi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  build.rs  bump.rs  cli-usage.html  config.html  contributing.html  hello-world.html  index.html  install.html  print.html  reference.html  searchindex.js  searchindex.json  steps.html  testing.html  uninstalling.html  updating.html  wasm-bindgen.html  wasm-opt.html
.github/: dependabot.yml
.github/workflows/: main.yml
crates/assemble/: Cargo.toml
crates/assemble/src/: main.rs
crates/cargo-wasi/: Cargo.toml
crates/cargo-wasi-exe/: Cargo.toml
crates/cargo-wasi-exe/src/: lib.rs
crates/cargo-wasi-shim/: Cargo.toml  build.rs
crates/cargo-wasi-shim/src/: main.rs
crates/cargo-wasi-shim/tests/: test.rs
doc/: SUMMARY.md  book.toml  cli-usage.md  config.md  contributing.md  hello-world.md  index.md  install.md  reference.md  steps.md  testing.md  uninstalling.md  updating.md  wasm-bindgen.md  wasm-opt.md
examples/hello-world/: Cargo.toml
examples/markdown/: Cargo.toml  README.md
examples/markdown/src/: lib.rs
examples/read-file/: Cargo.toml  README.md
examples/read-file/src/: main.rs
src/: cache.rs  config.rs  internal.rs  lib.rs  main.rs  tool_path.rs  utils.rs
tests/: tests.rs
tests/tests/: main.rs  support.rs
