[package]
name = "cargo-wasi"
version = "0.1.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/cargo-wasi"
readme = "README.md"
description = """
Subcommand for Cargo to easily build code for `wasm32-wasi`
"""

# This package will be renamed on crates.io to `cargo-wasi-src`, so make sure
# the binary is always called `cargo-wasi`.
[[bin]]
name = "cargo-wasi"

[workspace]
members = [
  'crates/assemble',
  'crates/cargo-wasi-shim',
  'examples/markdown',
  'examples/hello-world',
]
exclude = ['tmp', 'target', 'cargo-wasi-*']

[dependencies]
anyhow = "1.0"
atty = "0.2"
dirs = "2.0.2"
flate2 = "1"
fs2 = "0.4"
reqwest = "0.9"
rustc-demangle = "0.1.16"
same-file = "1.0"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
termcolor = "1.0.5"
walrus = "0.12"
which = "3.0"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
wasmparser = "0.32"

[patch.crates-io]
walrus = { git = 'https://github.com/rustwasm/walrus' }
