[package]
name = "cargo-wasi"
version = "0.1.26"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cargo-wasi"
readme = "README.md"
description = """
Subcommand for Cargo to easily build code for `wasm32-wasi`
"""
exclude = ['cargo-wasi-*']

# This package will be renamed on crates.io to `cargo-wasi-src`, so make sure
# the binary/library is always called `cargo-wasi`.
[[bin]]
name = "cargo-wasi"
path = "src/main.rs"
[lib]
name = "cargo_wasi"

[workspace]
members = ['crates/assemble', 'crates/cargo-wasi-shim', 'examples/hello-world']
exclude = ['tmp', 'target']

[dependencies]
anyhow = "1.0"
atty = "0.2"
dirs = "3.0.1"
flate2 = "1"
fs2 = "0.4"
reqwest = { version = "0.11", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
rustc-demangle = "0.1.16"
same-file = "1.0"
semver = "0.11"
serde = { version = "1", features = ['derive'] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
termcolor = "1.0.5"
toml = "0.5"
walrus = "0.19"
which = "4.0"

[dev-dependencies]
assert_cmd = "1.0.0"
predicates = "1.0.1"
wasmparser = "0.78"
