[package]
name = "cargo-wasi"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/cargo-wasi"
readme = "../../README.md"
description = """
TODO description
"""

[dependencies]
cfg-if = "0.1.10"

[features]
default = ['locally-developed']
locally-developed = []
# NB: the `[features]` section must be last in this manifest to agree with
# `weave.rs` as part of the assemble crate. The features section here is removed
# when publishing to crates.io
