[package]
name = "cargo-wasi-shim"
version = "0.1.13"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/cargo-wasi"
readme = "../../README.md"
description = """
Subcommand for Cargo to easily build code for `wasm32-wasi`
"""

[dependencies]
cfg-if = "0.1.10"

[dev-dependencies]
tempfile = "3"

[features]
default = ['locally-developed']
locally-developed = []
# NB: the `[features]` section must be last in this manifest to agree with
# `weave.rs` as part of the assemble crate. The features section here is removed
# when publishing to crates.io
